# YutubuDownload-Desktop

./: .gitignore  Cargo.toml  DOWNLOAD_GUIDE.md  README.md  RELEASE_GITHUB_v2.0.1.md  RELEASE_v2.0.1.md  TROUBLESHOOTING.md  VERCEL.md  YTdownloadScriptForVideoPlaylistAudio.md  YutubuDownload  index.html  install.sh
.github/workflows/: desktop.yml  release-desktop.yml  website.yml
crates/ytd-core/: Cargo.toml
crates/ytd-core-cli/: Cargo.toml
crates/ytd-core-cli/src/: main.rs
crates/ytd-core/src/: cookies.rs  deps.rs  download.rs  error.rs  lib.rs  metadata.rs  paths.rs  process_util.rs  quality.rs  types.rs
desktop/: README.md  index.html  launch-with-dbus.sh  package-lock.json  package.json  yutubu-download.desktop.template
desktop/docs/: GUI_APP_GUIDE.md  PLAYER_AND_PERFORMANCE.md  RELEASE_v2.0.1.md  TECHNOLOGY.md
desktop/scripts/: build-windows-release.bat  copy-screenshots.mjs
desktop/src/: App.tsx  api.ts  docContent.ts  downloadQuality.ts  history.ts  incompletePlaylists.ts  playlistProgress.ts  searchCompleted.ts  settings.ts  styles.css  types.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/linux/: YutubuDownload.desktop  deb-postinstall.sh  deb-postremove.sh  deb-preinstall.sh  yutubu-download-launcher.sh
desktop/src-tauri/src/: dbus_bootstrap.rs  lib.rs  linux_media_env.rs  main.rs  media_stream.rs  native_player.rs  state.rs
desktop/src-tauri/src/commands/: docs.rs  download.rs  media.rs  metadata.rs  mod.rs  system.rs
desktop/src/components/: DependencyPanel.tsx  DocsPage.tsx  DownloadForm.tsx  (+5 more)
website/: .env.example  .gitignore  README.md  package-lock.json  package.json
website/app/: globals.css  layout.tsx
website/components/: AppIcon.tsx  DownloadSection.tsx  FeaturesSection.tsx  HeroSection.tsx  HomePage.tsx  ImageLightbox.tsx  LinuxInstallGuide.tsx  MacInstallGuide.tsx  Nav.tsx  Reveal.tsx  ScreenshotsSection.tsx  ScrollLightning.tsx  StatsCounter.tsx  StepsSection.tsx  WindowsInstallGuide.tsx
website/lib/: config.ts  github.ts  stats-store.ts  stats.ts
(+5 files in other folders)
