[package]
name = "ytd-core-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Headless JSON CLI for YutubuDownload core"

[[bin]]
name = "ytd-core-cli"
path = "src/main.rs"

[dependencies]
ytd-core = { path = "../ytd-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
