[package]
name = "ytd-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core download orchestration for YutubuDownload"

[dependencies]
dirs = "6"
fs2 = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt", "macros", "time"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
