[package]
name = "yutubu-download"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "YutubuDownload desktop app"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ytd-core = { path = "../../crates/ytd-core" }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
which = "6"
http = "1"
http-range = "0.1.5"
percent-encoding = "2"
# Force older time to avoid tauri-utils trait conflict (time >= 0.3.48).
time = "=0.3.36"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
gdk = "0.18"
gdkx11 = "0.18"

[lib]
name = "yutubu_download_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
